slp_cft/tests/resources/cft/cloudformation_with_ref_and_without_default.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Custom Standaolne SecurityGroupIngress Configuration ",
    "Parameters": {
        "PublicSGSource": {
            "Description": "The IP address range that can be used to access the web app",
            "Type": "String",
            "MinLength": "9",
            "MaxLength": "18",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
        }
    },
    "Resources": {
        "PublicSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Condition": "EC2SecurityEnabled",
            "Properties": {
                "VpcId": {
                    "Ref": "SimpleVPC"
                },
                "GroupName": {
                    "Fn::Join": [
                        "-",
                        [
                            {
                                "Ref": "NamingPrefix"
                            },
                            "SG"
                        ]
                    ]
                },
                "GroupDescription": "Enable HTTP access via port 80 and 443 to the allowed CIDR",
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": {
                            "Ref": "PublicSGSource"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": {
                            "Ref": "PublicSGSource"
                        }
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "-",
                                [
                                    {
                                        "Ref": "NamingPrefix"
                                    },
                                    "SG"
                                ]
                            ]
                        }
                    }
                ]
            }
        }
    }
}
